# Paper_test

./: CMakeLists.txt  build.sh  compute.cpp  dft_simd.cpp  fftc.cpp  fftc.txt  fftw.txt  t.sh  test.py  test.sh  test_func.py  utils.cpp  utils.h
CMakeModules/: FindFFTW.cmake
